--- a/public/m/category.html
+++ b/public/m/category.html
@@ -1,175 +1,110 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cn">
 
 <head>
     <meta charset="UTF-8">
-    <!-- 1. 添加视口 -->
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>自己写的移动端分类</title>
-    <!-- 引入MUI的CSS文件 -->
-    <link rel="stylesheet" href="lib/mui/css/mui.css">
-    <!-- 引入字体图标fontawsome字体图标库的CSS文件 -->
-    <link rel="stylesheet" href="lib/fontAwesome/css/font-awesome.css">
-    <!-- 引入自己的less文件 注意 stylesheet/less-->
-    <link rel="stylesheet/less" href="less/category.less">
-    <!-- 引入less.js的编译器文件 编译less代码 要编译index.less 依赖index.less  影响页面渲染优先执行 -->
-    <script src="lib/less/less.js"></script>
-    <!-- 引入rem.js屏幕适配的JS代码 -->
-    <script src="js/rem.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>乐淘</title>
+    <link rel="icon" href="./images/favicon.ico">
+    <link rel="stylesheet" href="./lib/mui/css/mui.css">
+    <link rel="stylesheet" href="./lib/fontAwesome/css/font-awesome.css">
+    <link rel="stylesheet/less" href="./less/category.less">
+    <script src="./lib/less/less.js"></script>
+    <script src="./js/rem.js"></script>
 </head>
 
 <body>
-    <!-- 头部区域 -->
-    <header id="header">
-        <!-- 使用浏览器历史记录 返回上一页history.back() -->
-        <a href="javascript:history.back();" class="fa fa-arrow-left"></a>
-        <form action="#">
-            <input type="search" name="" placeholder="请输入要搜索的商品">
-        </form>
-        <a href="search.html" class="fa fa-search"></a>
+    <header id="lt-header">
+        <a href="./index.html">
+            <i class="fa fa-arrow-left" aria-hidden="true"></i>
+        </a>
+        <h1>
+            <input type="search" name="" placeholder="请输入搜索内容">
+        </h1>
+        <a href="./search.html">
+            <i class="fa fa-search" aria-hidden="true"></i>
+        </a>
     </header>
-    <!-- 主体区域 -->
     <main id="main">
-        <div class="category-left">
-            <!-- 区域滚动的父容器 -->
+        <div class="left">
             <div class="mui-scroll-wrapper">
-                <!-- 区域滚动的子容器 -->
                 <div class="mui-scroll">
                     <!--这里放置真实显示的DOM内容-->
-                    <ul>
-                        <li class="active"><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
+                    <ul id="l-content">
+                        <li class="active">
+                            <a href="#">
+                                体育馆
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
         </div>
-        <div class="category-right">
+        <div class="right">
             <div class="mui-scroll-wrapper">
                 <div class="mui-scroll">
-                    <!--这里放置真实显示的DOM内容-->
-                    <ul>
-                        <li>
-                            <a href="#">
-                                <img src="images/brand1.png" alt="">
-                                <p>耐克</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="images/brand1.png" alt="">
-                                <p>耐克</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="images/brand1.png" alt="">
-                                <p>耐克</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="images/brand1.png" alt="">
-                                <p>耐克</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="images/brand1.png" alt="">
-                                <p>耐克</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="images/brand1.png" alt="">
-                                <p>耐克</p>
-                            </a>
-                        </li>
-                    </ul>
+                    <div class="mui-row " id="category-right">
+                        <div class="mui-col-xs-4" >
+                            <img src="./images/brand1.png" alt="">
+                            <p>耐克</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </main>
-    <!-- 底部区域 -->
     <footer id="footer">
-        <ul>
-            <li>
-                <a href="index.html" class="fa fa-home">
-                    <span>首页</span>
+        <div class="mui-row">
+            <div class="mui-col-xs-3">
+                <a href="./index.html">
+                    <i class="fa fa-home"></i>
+                    <p>首页</p>
                 </a>
-            </li>
-            <li>
-                <a href="category.html" class="fa fa-bars">
-                    <span>分类</span>
-                </a>
-            </li>
-            <li>
-                <a href="cart.html" class="fa fa-shopping-cart">
-                    <span>购物车</span>
-                </a>
-            </li>
-            <li>
-                <a href="user.html" class="fa fa-user">
-                    <span>个人中心</span>
-                </a>
-            </li>
-        </ul>
-    </footer>
-    <!-- mask遮罩层 -->
-    <div class="mask">
-        <div class="spinner">
-            <div class="spinner-container container1">
-                <div class="circle1"></div>
-                <div class="circle2"></div>
-                <div class="circle3"></div>
-                <div class="circle4"></div>
             </div>
-            <div class="spinner-container container2">
-                <div class="circle1"></div>
-                <div class="circle2"></div>
-                <div class="circle3"></div>
-                <div class="circle4"></div>
+            <div class="mui-col-xs-3">
+                <a href="#">
+                    <i class="fa fa-bars"></i>
+                    <p>分类</p>
+                </a>
             </div>
-            <div class="spinner-container container3">
-                <div class="circle1"></div>
-                <div class="circle2"></div>
-                <div class="circle3"></div>
-                <div class="circle4"></div>
+            <div class="mui-col-xs-3">
+                <a href="#">
+                    <i class="fa fa-shopping-cart"></i>
+                    <p>购物车</p>
+                </a>
+            </div>
+            <div class="mui-col-xs-3">
+                <a href="#">
+                    <i class="fa fa-user"></i>
+                    <p>个人中心</p>
+                </a>
             </div>
         </div>
+    </footer>
+
+    <!-- 模板内容 -->
+    <script type="template" id="tpl-left">
+        {{each list}}
+            {{if $index==0}}
+            <li class='active' data-id='{{$value.id}}'><a href="javascript:" >{{$value.categoryName}}</a></li>
+            {{else}}
+            <li data-id='{{$value.id}}'><a href="javascript:" >{{$value.categoryName}}</a></li>
+            {{/if}}
+            {{/each}}
+    </script>
+    <script type="html/text" id="tpl-right">
+    {{each list}}
+    <div class="mui-col-xs-4" id="category-right">
+        <img src="{{$value.brandLogo}}" alt="">
+        <p>{{$value.brandName}}</p>
     </div>
-    <!-- 定义分类左侧的模板 -->
-    <script id="categoryLeftTpl" type="text/html">
-        {{each rows value index}}
-        <!-- 判断索引是否为0  为0返回active类名 不为0 返回空 -->
-        <li class="{{index == 0 ? 'active' : '' }}"><a href="#" data-id="{{value.id}}">{{value.categoryName}}</a></li>
-        {{/each}}
+    {{/each}}
     </script>
-    <!-- 定义分类右侧的模板 -->
-    <script id="categoryRightTpl" type="text/html">
-        <!-- 判断数组的长度是否大于0  大于0就进行遍历 -->
-        {{if rows.length>0}} {{each rows value}}
-        <li>
-            <a href="#">
-                <img src="{{value.brandLogo}}" alt="">
-                <p>{{value.brandName}}</p>
-            </a>
-        </li>
-        {{/each}} {{else}}
-        <!-- 如果不大于0表示没有数据 提示没有品牌数据 -->
-        <p>当前品牌暂无数据!</p>
-        {{/if}}
-    </script>
-    <!-- 引入zepto的JS 发送请求之类的 和 获取元素 添加事件之类 -->
-    <script src="lib/zepto/zepto.min.js"></script>
-    <!-- 引入MUI的js -->
-    <script src="lib/mui/js/mui.js"></script>
-    <!-- 引入模板引擎 artTemplate template-web.js最新4.0简洁版本-->
-    <script src="lib/artTemplate/template-web.js"></script>
-    <!-- 引入自己的JS包 自己的代码放在最后面 -->
-    <script src="js/category.js"></script>
+    <script src="./lib/zepto/zepto.min.js"></script>
+    <script src="./lib/artTemplate/template-web.js"></script>
+    <script src="./lib/mui/js/mui.min.js"></script>
+    <script src="./js/category.js"></script>
 </body>
 
 </html>
