--- a/public/m/search.html
+++ b/public/m/search.html
@@ -1,111 +1,90 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cn">
 
 <head>
     <meta charset="UTF-8">
-    <!-- 1. 添加视口 -->
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>自己写的移动端搜索</title>
-    <!-- 引入MUI的CSS文件 -->
-    <link rel="stylesheet" href="lib/mui/css/mui.css">
-    <!-- 引入字体图标fontawsome字体图标库的CSS文件 -->
-    <link rel="stylesheet" href="lib/fontAwesome/css/font-awesome.css">
-    <!-- 引入自己的less文件 注意 stylesheet/less-->
-    <link rel="stylesheet/less" href="less/search.less">
-    <!-- 引入less.js的编译器文件 编译less代码 要编译index.less 依赖index.less  影响页面渲染优先执行 -->
-    <script src="lib/less/less.js"></script>
-    <!-- 引入rem.js屏幕适配的JS代码 -->
-    <script src="js/rem.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>乐淘</title>
+    <link rel="icon" href="./images/favicon.ico">
+    <link rel="stylesheet" href="./lib/mui/css/mui.css">
+    <link rel="stylesheet" href="./lib/fontAwesome/css/font-awesome.css">
+    <link rel="stylesheet/less" href="./less/search.less">
+    <script src="./lib/less/less.js"></script>
+    <script src="./js/rem.js"></script>
 </head>
 
 <body>
-    <!-- 头部区域 -->
-    <header id="header">
-        <!-- 使用浏览器历史记录 返回上一页history.back() -->
-        <a href="javascript:history.back();" class="fa fa-arrow-left"></a>
-        <h4>搜索中心</h4>
+    <header id="lt-header">
+        <a href="./category.html">
+            <i class="fa fa-arrow-left" aria-hidden="true"></i>
+        </a>
+        <h1>搜索中心</h1>
     </header>
-    <!-- 主体区域 -->
     <main id="main">
-        <!-- 搜索表单 -->
-        <form action="#" class="form-search">
-            <input type="search" class="input-search" name="" placeholder="请输入要搜索的商品">
-            <!-- 注意把按钮类型改成button不然会触发提交 默认submit -->
-            <button type="button" class="mui-btn mui-btn-primary btn-search">搜索</button>
-        </form>
-        <!-- 搜索历史 -->
-        <div class="search-history">
-            <div class="mui-card">
-                <!--页眉，放置标题-->
-                <div class="mui-card-header">
-                    <span>搜索历史</span>
-                    <a href="#" class="fa fa-trash btn-clear">
-                        清空记录
-                    </a>
-                </div>
-                <!--内容区-->
-                <div class="mui-card-content">
-                    <ul class="mui-table-view">
-                        <li class="mui-table-view-cell">Item 1
-                            <span class="mui-badge mui-badge-success fa fa-times"></span>
-                        </li>
-                        <li class="mui-table-view-cell">Item 2
-                            <span class="mui-badge mui-badge-success fa fa-times"></span>
-                        </li>
-                        <li class="mui-table-view-cell">Item 3
-                            <span class="mui-badge mui-badge-success fa fa-times"></span>
-                        </li>
-                    </ul>
-                </div>
+        <div class="search-title">
+            <form action="#">
+                <input type="search" class="search-text" placeholder="请输入要搜索商品">
+                <button type="button" class="btn-search">搜索</button>
+            </form>
+        </div>
+        <div class="mui-card">
+            <!--页眉，放置标题-->
+            <div class="mui-card-header">
+                <p>搜索历史</p>
+                <a href="#">
+                    <i class="fa fa-trash-o" aria-hidden="true"></i>
+                    清空记录
+                </a>
+            </div>
+            <!--内容区-->
+            <div class="mui-card-content">
+                <ul class="mui-table-view">
+                    
+                </ul>
+            </div>
+    </main>
+    <footer id="footer">
+        <div class="mui-row">
+            <div class="mui-col-xs-3">
+                <a href="#">
+                    <i class="fa fa-home"></i>
+                    <p>首页</p>
+                </a>
+            </div>
+            <div class="mui-col-xs-3">
+                <a href="./category.html">
+                    <i class="fa fa-bars"></i>
+                    <p>分类</p>
+                </a>
+            </div>
+            <div class="mui-col-xs-3">
+                <a href="#">
+                    <i class="fa fa-shopping-cart"></i>
+                    <p>购物车</p>
+                </a>
+            </div>
+            <div class="mui-col-xs-3">
+                <a href="#">
+                    <i class="fa fa-user"></i>
+                    <p>个人中心</p>
+                </a>
             </div>
         </div>
-    </main>
-    <!-- 底部区域 -->
-    <footer id="footer">
-        <ul>
-            <li>
-                <a href="index.html" class="fa fa-home">
-                    <span>首页</span>
-                </a>
-            </li>
-            <li>
-                <a href="category.html" class="fa fa-bars">
-                    <span>分类</span>
-                </a>
-            </li>
-            <li>
-                <a href="cart.html" class="fa fa-shopping-cart">
-                    <span>购物车</span>
-                </a>
-            </li>
-            <li>
-                <a href="user.html" class="fa fa-user">
-                    <span>个人中心</span>
-                </a>
-            </li>
-        </ul>
     </footer>
-    <script id="searchListTpl" type="text/html">
-        {{if rows.length > 0}}
-            {{each rows value index}}
-            <li class="mui-table-view-cell">{{value}}
-                <span href="#" class="mui-badge mui-badge-success fa fa-times btn-delete" data-index="{{index}}"></span>
+    <script id="tpl-list" type="html/text">
+        {{each data}}
+            <li class="mui-table-view-cell">{{$value}}
+                <span class="mui-badge" data-index='{{$index}}'>
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                </span>
             </li>
-            {{/each}}
-        {{else}}
-            <li class="mui-table-view-cell">
-                 你还没有女朋友！
-            </li>
-        {{/if}}
+        {{/each}}
     </script>
-    <!-- 引入zepto的JS 发送请求之类的 和 获取元素 添加事件之类 -->
-    <script src="lib/zepto/zepto.min.js"></script>
-    <!-- 引入MUI的js -->
-    <script src="lib/mui/js/mui.js"></script>
-    <!-- 引入模板引擎 artTemplate template-web.js最新4.0简洁版本-->
-    <script src="lib/artTemplate/template-web.js"></script>
-    <!-- 引入自己的JS包 自己的代码放在最后面 -->
-    <script src="js/search.js"></script>
+    <script src="./lib/zepto/zepto.min.js"></script>
+    <script src="./lib/artTemplate/template-web.js"></script>
+    <script src="./lib/mui/js/mui.min.js"></script>
+    <script src="./js/search.js"></script>
 </body>
 
 </html>
