--- a/public/m/index.html
+++ b/public/m/index.html
@@ -184,7 +184,7 @@
                 </a>
             </div>
             <div class="mui-col-xs-3">
-                <a href="#">
+                <a href="cart.html">
                     <i class="fa fa-shopping-cart"></i>
                     <p>购物车</p>
                 </a>
